--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "e2e": "playwright test"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
     "@tabler/icons-react": "^2.16.0",
-    "antd": "^5.4.2",
     "electron-updater": "^5.3.0",
     "react-router-dom": "^6.10.0"
   },
