--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
-    "@prisma/client": "^4.13.0",
     "@tabler/icons-react": "^2.16.0",
+    "axios": "^1.3.6",
     "electron-updater": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
-    "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.60.0",
