--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "control-funeraria",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "main": "dist-electron/main/index.js",
-  "description": "Electron Vite React boilerplate.",
+  "build": "Control de Funeraria",
+  "description": "Gestor de Clientes, Servicios y Polizas de Funararia",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
   "private": true,
