--- a/app/package.json
+++ b/app/package.json
@@ -23,11 +23,16 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
+    "@mui/x-date-pickers": "^6.3.0",
     "@tabler/icons-react": "^2.16.0",
+    "@tanstack/react-query": "^4.29.5",
     "axios": "^1.3.6",
+    "dayjs": "^1.11.7",
     "electron-updater": "^5.3.0",
+    "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.0",
