--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "start": "node main.ts",
+    "start": "ts-node main.ts",
     "dev": "nodemon main.ts"
   },
   "keywords": [],
