--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.7",
     "electron-updater": "^5.3.0",
     "react-hook-form": "^7.43.9",
+    "react-imask": "^6.6.1",
     "react-router-dom": "^6.10.0",
     "zustand": "^4.3.7"
   },
